--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "mime": "^2.2.0",
     "multer": "^1.3.0",
     "read-chunk": "^2.1.0",
-    "sqlite": "^3",
+    "sqlite": ">=2.9.3",
     "type-is": "^1.6.15"
   }
 }
