--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eslint-plugin-standard": "^3.0.1"
   },
   "dependencies": {
-    "argon2": "^0.20.1",
+    "argon2": "git+https://github.com/jbrunink/node-argon2.git#5768a935bccd3cc820e6000737a9468e5dfc74d9",
     "busboy": "^0.2.14",
     "debug": "^3.1.0",
     "ejs": "^2.5.7",
