--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "isbinaryfile": "^3.0.2",
     "md5-file": "^3.2.3",
     "mime": "^2.2.0",
+    "morgan": "^1.9.1",
     "multer": "^1.3.0",
     "read-chunk": "^2.1.0",
     "sqlite": "^3.0.1",
