Add basic travis support and deployment to npmjs

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "duwww",
+  "name": "duwwwtest",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx eslint .",
     "start": "node src/index.js"
   },
   "repository": {
