--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "duwww",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "A puush.me proxy written in Node.js.",
   "main": "src/index.js",
   "scripts": {
     "test": "npx eslint .",
