--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ deploy:
   script: "cp .npmrc.template $HOME/.npmrc && npm publish"
   skip_cleanup: true
   on:
+    node: 10
     tags: true
 
 notifications:
